--- a/monitoring/templates/dashboard/partials/logs_table.html
+++ b/monitoring/templates/dashboard/partials/logs_table.html
@@ -4,9 +4,9 @@
         <thead class="table-light">
             <tr>
                 <th>Час</th>
-                <th>Потужність (Вт)</th>
-                <th>Аномалія</th>
-                <th>Прогнозується аномалія</th>
+                <th>Навантаження (Вт)</th>
+                <th>Виявлені аномалії</th>
+                <th>Імовірність аномалії</th>
                 <th>Резервна копія</th>
             </tr>
         </thead>
