--- a/monitoring/templates/settings/scheduler_status.html
+++ b/monitoring/templates/settings/scheduler_status.html
@@ -52,7 +52,7 @@
                                     {% csrf_token %}
                                     <button type="submit"
                                             class="btn btn-info d-flex justify-content-center align-items-center w-100">
-                                        <i class="bi bi-tools me-2"></i> Перезаписати БД
+                                        <i class="bi bi-tools me-2"></i> Підтримка БД
                                     </button>
                                 </form>
                             {% else %}
