--- a/monitoring/templates/settings/system_settings.html
+++ b/monitoring/templates/settings/system_settings.html
@@ -62,11 +62,11 @@
 
                             <hr>
 
-                            <h6 class="text-primary mb-3">Перезапис бази даних </h6>
+                            <h6 class="text-primary mb-3">Підтримка бази даних </h6>
                             <div class="row mb-3">
                                 <div class="col-md-6 col-sm-12 col-lg-3">
                                     <label for="{{ form.maintenance_time.id_for_label }}" class="form-label">
-                                        Час перезапису
+                                        Розклад
                                     </label>
                                     {{ form.maintenance_time }}
                                     {% if form.maintenance_time.errors %}
