--- a/monitoring/templates/base.html
+++ b/monitoring/templates/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Моніторинг енергосистеми{% endblock %}</title>
+    <title>{% block title %}Моніторинг{% endblock %}</title>
     <link rel="icon" href="{% static 'images/favicon.svg' %}" type="image/x-icon">
 
     <!-- Bootstrap 5 CSS -->
@@ -152,7 +152,7 @@
 <nav class="col-12 navbar navbar-expand-md navbar-dark bg-primary sticky-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'dashboard' %}">
-            <i class="bi bi-lightning-charge-fill"></i> Моніторинг енергосистеми
+            <i class="bi bi-lightning-charge-fill"></i> Моніторинг
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
@@ -207,9 +207,6 @@
                                         <i class="bi bi-people"></i> Управління користувачами
                                     </a>
                                 </li>
-                            {% endif %}
-
-                            {% if user.profile.is_manager %}
                                 <li>
                                     <a class="dropdown-item" href="{% url 'system_settings' %}">
                                         <i class="bi bi-gear"></i> Налаштування планувальника
