Small templates changes

--- a/monitoring/templates/analytics/analytics.html
+++ b/monitoring/templates/analytics/analytics.html
@@ -142,7 +142,7 @@
         <div class="col-md-6">
             <div class="card shadow-sm">
                 <div class="card-header bg-white py-3">
-                    <h5 class="mb-0">Причини аномалій в роботі акамулятора</h5>
+                    <h5 class="mb-0">Причини аномалій в роботі енергосистеми</h5>
                 </div>
                 <div class="card-body">
                     <div id="anomaly-parameter-data" hx-get="{% url 'anomaly_by_parameter_chart' %}?period={{ period }}"
