--- a/monitoring/templates/dashboard/dashboard.html
+++ b/monitoring/templates/dashboard/dashboard.html
@@ -74,9 +74,9 @@
                                     </div>
                                     <div class="small mt-1">
                                         <strong>Навантаження:</strong> {{ log.load_power|floatformat:2 }} Вт
-                                        {% if log.is_manual %}
-                                            <span class="badge bg-info ms-2">Ручний запис</span>
-                                        {% endif %}
+{#                                        {% if log.is_manual %}#}
+{#                                            <span class="badge bg-info ms-2">Ручний запис</span>#}
+{#                                        {% endif %}#}
                                     </div>
                                 </a>
                             {% endfor %}
